Fix menu height on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -394,6 +394,7 @@ button {
 
   .main-container-app {
     min-height: 90vh;
+    margin-top: 5vh;
   }
   .sub-title {
     font-size: 2.4rem;
